syntax = "proto3";

package public;
option go_package = "github.com/chmking/horde/protobuf/public";

enum Status {
  STATUS_UNKNOWN  = 0;
  STATUS_IDLE     = 1;
  STATUS_SCALING  = 2;
  STATUS_RUNNING  = 3;
  STATUS_STOPPING = 4;
  STATUS_QUITTING = 5;
}

enum Health {
  HEALTH_UNKNOWN   = 0;
  HEALTH_HEALTHY   = 1;
  HEALTH_UNHEALTHY = 2;
}

enum Code {
  CODE_SUCCESS = 0;
  CODE_ERROR   = 1;
  CODE_PANIC   = 2;
}

service Manager {
  rpc Start(StartRequest)   returns (StartResponse) {}
  rpc Status(StatusRequest) returns (StatusResponse) {}
  rpc Stop(StopRequest)     returns (StopResponse) {}
  rpc Quit(QuitRequest)     returns (QuitResponse) {}
}

message StartRequest {
  int32  Users = 1;
  double Rate  = 2;
}

message StartResponse {}

message StatusRequest{}

message StatusResponse{
  Status State  = 1;
  Orders Orders = 2;
}

message Orders{
  string Id    = 1;
  int32  Count = 2;
  double Rate  = 3;
}

message StopRequest{}

message StopResponse{}

message QuitRequest{}

message QuitResponse{}
